k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: katerina-app
spec:
  selector:
    app: backend
  ports:
    - port: 3001
      targetPort: 3001
