k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: katerina-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
